Start preparing for first submission, cv 4 all series :alien:

--- a/notebooks/Jonas_6.ipynb
+++ b/notebooks/Jonas_6.ipynb
@@ -503,55 +503,150 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eta              0.84\n",
+      "max_depth       13.00\n",
+      "n_estimators    21.00\n",
+      "reg_alpha        0.34\n",
+      "score          109.41\n",
+      "Name: 0, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import RandomizedSearchCV, KFold\n",
     "from sklearn.metrics import mean_squared_error, make_scorer\n",
     "\n",
     "lags = 25\n",
-    "s = 'ES1856A'\n",
     "\n",
-    "data = wide_series[list(wide_series.reset_index().day < '2015-01-01')]\n",
-    "to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
-    "features = create_lagged_features(to_lag, lags)\\\n",
-    "    .join(extra_features[extra_features.station == s].set_index('date'))\\\n",
-    "    .join(rolling_mean_features[rolling_mean_features.station == s]\n",
-    "          .set_index('date').drop(['station', 'max_conc_obs'], axis=1))\\\n",
-    "    .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\n",
-    "X = features[[c for c in features.columns if not c in [\n",
-    "    'time', 'datetime', 'Concentration', 'target', 'station'\n",
-    "]]].values\n",
-    "y = features['Concentration'].fillna(method='ffill').values\n",
+    "for s in test.station.unique():\n",
+    "    data = wide_series[list(wide_series.reset_index().day < '2015-01-01')]\n",
+    "    to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
+    "    features = create_lagged_features(to_lag, lags)\\\n",
+    "        .join(extra_features[extra_features.station == s].set_index('date'))\\\n",
+    "        .join(rolling_mean_features[rolling_mean_features.station == s]\n",
+    "              .set_index('date').drop(['station', 'max_conc_obs'], axis=1))\\\n",
+    "        .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\n",
+    "    X = features[[c for c in features.columns if not c in [\n",
+    "        'time', 'datetime', 'Concentration', 'target', 'station'\n",
+    "    ]]].values\n",
+    "    y = features['Concentration'].fillna(method='ffill').values\n",
     "\n",
-    "params = pd.DataFrame({\n",
-    "    'eta': random.sample(list(np.linspace(0.01, 2, 201)), 200),\n",
-    "    'n_estimators': random.sample(list(range(1, 250)), 200),\n",
-    "    'reg_alpha': random.sample(list(np.linspace(0.01, 1, 201)), 200),\n",
-    "    'max_depth': random.sample(list(range(1, 35)), 25) * 8,\n",
-    "    'score': [np.nan] * 200\n",
-    "})\n",
-    "for i, r in params[['eta', 'n_estimators', 'reg_alpha', 'max_depth']].iterrows():\n",
-    "    kf = KFold(n_splits=3)\n",
-    "    metric = []\n",
-    "    for train_index, test_index in kf.split(X):\n",
-    "        X_train, X_test = X[train_index], X[test_index]\n",
-    "        y_train, y_test = y[train_index], y[test_index]\n",
-    "        p = dict(r)\n",
-    "        p['n_estimators'] = int(p['n_estimators'])\n",
-    "        p['max_depth'] = int(p['max_depth'])\n",
-    "        model = xgb.XGBRegressor(**p)\n",
-    "        model.fit(X_train, y_train)\n",
-    "        y_pred = model.predict(X_test)\n",
-    "        metric.append(\n",
-    "            mean_squared_error(y_test, y_pred)\n",
-    "        ) \n",
-    "        \n",
-    "    params.loc[i, 'score'] = np.mean(metric)\n",
-    "    print(params.iloc[i])\n",
+    "    params = pd.DataFrame({\n",
+    "        'eta': random.sample(list(np.linspace(0.01, 2, 201)), 200),\n",
+    "        'n_estimators': random.sample(list(range(1, 250)), 200),\n",
+    "        'reg_alpha': random.sample(list(np.linspace(0.01, 1, 201)), 200),\n",
+    "        'max_depth': random.sample(list(range(1, 35)), 25) * 8,\n",
+    "        'score': [np.nan] * 200\n",
+    "    })\n",
+    "    for i, r in params[['eta', 'n_estimators', 'reg_alpha', 'max_depth']].head(10).iterrows():\n",
+    "        kf = KFold(n_splits=3)\n",
+    "        metric = []\n",
+    "        for train_index, test_index in kf.split(X):\n",
+    "            X_train, X_test = X[train_index], X[test_index]\n",
+    "            y_train, y_test = y[train_index], y[test_index]\n",
+    "            p = dict(r)\n",
+    "            p['n_estimators'] = int(p['n_estimators'])\n",
+    "            p['max_depth'] = int(p['max_depth'])\n",
+    "            model = xgb.XGBRegressor(**p)\n",
+    "            model.fit(X_train, y_train)\n",
+    "            y_pred = model.predict(X_test)\n",
+    "            metric.append(\n",
+    "                mean_squared_error(y_test, y_pred)\n",
+    "            ) \n",
+    "\n",
+    "        params.loc[i, 'score'] = np.mean(metric)\n",
+    "        print(params.iloc[i])\n",
+    "\n",
+    "    params.to_csv('../reports/cv_xgb_Jonas_6_{}_{}.csv'\n",
+    "                  .format(s, len(glob.glob('../reports/cv_xgb_Jonas_6_{}_*'.format(s)))))\n",
+    "    params.sort_values('score').head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eta</th>\n",
+       "      <th>max_depth</th>\n",
+       "      <th>n_estimators</th>\n",
+       "      <th>reg_alpha</th>\n",
+       "      <th>score</th>\n",
+       "      <th>station</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1.72</td>\n",
+       "      <td>2</td>\n",
+       "      <td>222</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>24.07</td>\n",
+       "      <td>ES1856A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.09</td>\n",
+       "      <td>33</td>\n",
+       "      <td>153</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>57.46</td>\n",
+       "      <td>ES1396A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   eta  max_depth  n_estimators  reg_alpha  score  station\n",
+       "9 1.72          2           222       0.81  24.07  ES1856A\n",
+       "1 1.09         33           153       0.47  57.46  ES1396A"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_frames = []\n",
+    "for s in test.station.unique():\n",
+    "    frames = [pd.read_csv(f, index_col=0) for f in glob.glob('../reports/cv_xgb_Jonas_6*{}*'.format(s))]\n",
+    "    try:\n",
+    "        frame = pd.concat(frames)\n",
+    "        frame['station'] = s\n",
+    "        all_frames.append(frame)\n",
+    "    except ValueError:\n",
+    "        pass\n",
     "    \n",
-    "params.to_csv('../reports/cv_xgb_Jonas_6_{}_{}.csv'\n",
-    "              .format(s, len(glob.glob('../reports/cv_xgb_Jonas_6_{}_*'.format(s)))))\n",
-    "params.head()"
+    "pd.concat(all_frames).sort_values(['score', 'station']).drop_duplicates('station')"
    ]
   },
   {
@@ -561,7 +656,50 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "test_params = {\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "lags = 25\n",
+    "preds_by_station = []\n",
+    "edit_wide_series = copy.deepcopy(wide_series)\n",
+    "for d in test['date'].unique():\n",
+    "    data = wide_series_imputed[list(pd.to_datetime(wide_series_imputed.reset_index().day) <= d)]\n",
+    "    for s, p in zip(test.station.unique(), ):\n",
+    "        to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
+    "        features = create_lagged_features(to_lag, lags)\\\n",
+    "            .join(extra_features[extra_features.station == s].set_index('date'))\\\n",
+    "            .join(rolling_mean_features[rolling_mean_features.station == s]\n",
+    "                  .set_index('date').drop(['station', 'max_conc_obs'], axis=1))\\\n",
+    "            .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\n",
+    "        X = features[[c for c in features.columns if not c in [\n",
+    "            'time', 'datetime', 'Concentration', 'target', 'station'\n",
+    "        ]]].values\n",
+    "        y = features['Concentration'].fillna(method='ffill').values\n",
+    "        for agg in agg_types:\n",
+    "            print('Predicting {} for station {} day {}'.format(agg, s, d))\n",
+    "            y_train = np.nan_to_num(data.loc[\n",
+    "                list(~wide_series.reset_index()['day'].isin(test['date'].unique()))[:X.shape[0]],\n",
+    "                '{}_{}'.format(s, agg)\n",
+    "            ])\n",
+    "            X_test = np.nan_to_num(X.iloc[-1].values.reshape(1, X.shape[1]))\n",
+    "            model = xgb.XGBRegressor(n_estimators=100, n_jobs=4)\n",
+    "            model.fit(X_train, y_train)\n",
+    "            y_pred = model.predict(X_test)\n",
+    "            edit_wide_series.loc[d, '{}_{}'.format(s, agg)] = y_pred\n",
+    "            print(y_pred)"
+   ]
   }
  ],
  "metadata": {
