--- a/notebooks/Jonas_7.ipynb
+++ b/notebooks/Jonas_7.ipynb
@@ -889,258 +889,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>station</th>\n",
-       "      <th>ES0691A_mean</th>\n",
-       "      <th>ES1396A_mean</th>\n",
-       "      <th>ES1438A_mean</th>\n",
-       "      <th>ES1480A_mean</th>\n",
-       "      <th>ES1679A_mean</th>\n",
-       "      <th>ES1856A_mean</th>\n",
-       "      <th>ES1992A_mean</th>\n",
-       "      <th>ES0691A_max</th>\n",
-       "      <th>ES1396A_max</th>\n",
-       "      <th>ES1438A_max</th>\n",
-       "      <th>...</th>\n",
-       "      <th>ES1679A_max</th>\n",
-       "      <th>ES1856A_max</th>\n",
-       "      <th>ES1992A_max</th>\n",
-       "      <th>ES0691A_std</th>\n",
-       "      <th>ES1396A_std</th>\n",
-       "      <th>ES1438A_std</th>\n",
-       "      <th>ES1480A_std</th>\n",
-       "      <th>ES1679A_std</th>\n",
-       "      <th>ES1856A_std</th>\n",
-       "      <th>ES1992A_std</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>day</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2013-01-01</th>\n",
-       "      <td>42.39</td>\n",
-       "      <td>38.61</td>\n",
-       "      <td>51.39</td>\n",
-       "      <td>43.87</td>\n",
-       "      <td>37.13</td>\n",
-       "      <td>14.78</td>\n",
-       "      <td>23.35</td>\n",
-       "      <td>72.00</td>\n",
-       "      <td>98.00</td>\n",
-       "      <td>112.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>69.00</td>\n",
-       "      <td>39.00</td>\n",
-       "      <td>68.00</td>\n",
-       "      <td>18.13</td>\n",
-       "      <td>26.67</td>\n",
-       "      <td>25.73</td>\n",
-       "      <td>24.63</td>\n",
-       "      <td>20.29</td>\n",
-       "      <td>10.99</td>\n",
-       "      <td>21.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-02</th>\n",
-       "      <td>52.50</td>\n",
-       "      <td>47.58</td>\n",
-       "      <td>63.71</td>\n",
-       "      <td>54.50</td>\n",
-       "      <td>48.75</td>\n",
-       "      <td>32.08</td>\n",
-       "      <td>43.29</td>\n",
-       "      <td>87.00</td>\n",
-       "      <td>86.00</td>\n",
-       "      <td>119.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>76.00</td>\n",
-       "      <td>77.00</td>\n",
-       "      <td>85.00</td>\n",
-       "      <td>16.61</td>\n",
-       "      <td>24.72</td>\n",
-       "      <td>26.48</td>\n",
-       "      <td>19.18</td>\n",
-       "      <td>16.91</td>\n",
-       "      <td>25.43</td>\n",
-       "      <td>26.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-03</th>\n",
-       "      <td>64.62</td>\n",
-       "      <td>54.62</td>\n",
-       "      <td>74.04</td>\n",
-       "      <td>64.17</td>\n",
-       "      <td>49.25</td>\n",
-       "      <td>38.88</td>\n",
-       "      <td>49.04</td>\n",
-       "      <td>119.00</td>\n",
-       "      <td>85.00</td>\n",
-       "      <td>117.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>78.00</td>\n",
-       "      <td>94.00</td>\n",
-       "      <td>110.00</td>\n",
-       "      <td>22.69</td>\n",
-       "      <td>19.05</td>\n",
-       "      <td>22.87</td>\n",
-       "      <td>21.70</td>\n",
-       "      <td>14.87</td>\n",
-       "      <td>22.17</td>\n",
-       "      <td>31.43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-04</th>\n",
-       "      <td>54.12</td>\n",
-       "      <td>44.30</td>\n",
-       "      <td>44.50</td>\n",
-       "      <td>89.13</td>\n",
-       "      <td>61.92</td>\n",
-       "      <td>22.18</td>\n",
-       "      <td>39.04</td>\n",
-       "      <td>80.00</td>\n",
-       "      <td>113.00</td>\n",
-       "      <td>123.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>108.00</td>\n",
-       "      <td>60.00</td>\n",
-       "      <td>99.00</td>\n",
-       "      <td>16.58</td>\n",
-       "      <td>28.35</td>\n",
-       "      <td>32.46</td>\n",
-       "      <td>45.41</td>\n",
-       "      <td>25.83</td>\n",
-       "      <td>16.98</td>\n",
-       "      <td>28.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-05</th>\n",
-       "      <td>36.88</td>\n",
-       "      <td>39.17</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>89.00</td>\n",
-       "      <td>64.00</td>\n",
-       "      <td>12.25</td>\n",
-       "      <td>33.54</td>\n",
-       "      <td>60.00</td>\n",
-       "      <td>114.00</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>...</td>\n",
-       "      <td>114.00</td>\n",
-       "      <td>16.00</td>\n",
-       "      <td>85.00</td>\n",
-       "      <td>11.00</td>\n",
-       "      <td>22.21</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>21.63</td>\n",
-       "      <td>17.04</td>\n",
-       "      <td>2.56</td>\n",
-       "      <td>17.75</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "station     ES0691A_mean  ES1396A_mean  ES1438A_mean  ES1480A_mean  \\\n",
-       "day                                                                  \n",
-       "2013-01-01         42.39         38.61         51.39         43.87   \n",
-       "2013-01-02         52.50         47.58         63.71         54.50   \n",
-       "2013-01-03         64.62         54.62         74.04         64.17   \n",
-       "2013-01-04         54.12         44.30         44.50         89.13   \n",
-       "2013-01-05         36.88         39.17           nan         89.00   \n",
-       "\n",
-       "station     ES1679A_mean  ES1856A_mean  ES1992A_mean  ES0691A_max  \\\n",
-       "day                                                                 \n",
-       "2013-01-01         37.13         14.78         23.35        72.00   \n",
-       "2013-01-02         48.75         32.08         43.29        87.00   \n",
-       "2013-01-03         49.25         38.88         49.04       119.00   \n",
-       "2013-01-04         61.92         22.18         39.04        80.00   \n",
-       "2013-01-05         64.00         12.25         33.54        60.00   \n",
-       "\n",
-       "station     ES1396A_max  ES1438A_max     ...       ES1679A_max  ES1856A_max  \\\n",
-       "day                                      ...                                  \n",
-       "2013-01-01        98.00       112.00     ...             69.00        39.00   \n",
-       "2013-01-02        86.00       119.00     ...             76.00        77.00   \n",
-       "2013-01-03        85.00       117.00     ...             78.00        94.00   \n",
-       "2013-01-04       113.00       123.00     ...            108.00        60.00   \n",
-       "2013-01-05       114.00          nan     ...            114.00        16.00   \n",
-       "\n",
-       "station     ES1992A_max  ES0691A_std  ES1396A_std  ES1438A_std  ES1480A_std  \\\n",
-       "day                                                                           \n",
-       "2013-01-01        68.00        18.13        26.67        25.73        24.63   \n",
-       "2013-01-02        85.00        16.61        24.72        26.48        19.18   \n",
-       "2013-01-03       110.00        22.69        19.05        22.87        21.70   \n",
-       "2013-01-04        99.00        16.58        28.35        32.46        45.41   \n",
-       "2013-01-05        85.00        11.00        22.21          nan        21.63   \n",
-       "\n",
-       "station     ES1679A_std  ES1856A_std  ES1992A_std  \n",
-       "day                                                \n",
-       "2013-01-01        20.29        10.99        21.15  \n",
-       "2013-01-02        16.91        25.43        26.53  \n",
-       "2013-01-03        14.87        22.17        31.43  \n",
-       "2013-01-04        25.83        16.98        28.20  \n",
-       "2013-01-05        17.04         2.56        17.75  \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wide_series.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
    "outputs": [
@@ -1569,9 +1317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV Metric: 0.4542181057101191\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1679,61 +1434,100 @@
        "1094  2015-12-31  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# from sklearn.neighbors import KNeighborsClassifier\n",
-    "# from sklearn.model_selection import RandomizedSearchCV, KFold\n",
-    "# from sklearn.metrics import log_loss, make_scorer\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import RandomizedSearchCV, KFold\n",
+    "from sklearn.metrics import log_loss, make_scorer\n",
     "\n",
-    "# lags = 100\n",
-    "# preds_by_station = []\n",
-    "# for s, p in zip(test.station.unique(), test_params):\n",
-    "#     data = pd.concat([\n",
-    "#         wide_series[list(wide_series.reset_index().day < '2015-01-01')],\n",
-    "#         wide_series_imputed[list(wide_series_imputed.reset_index().day >= '2015-01-01')]\n",
-    "#     ])\n",
-    "#     to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
-    "#     features = create_lagged_features(to_lag, lags)\\\n",
-    "#         .join(extra_features[extra_features.station == s].set_index('date'))\\\n",
-    "#         .join(rolling_mean_features[rolling_mean_features.station == s]\n",
-    "#               .set_index('date').drop(['station', 'max_conc_obs'], axis=1))\\\n",
-    "#         .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\\\n",
-    "#         .fillna(method='bfill').fillna(method='ffill')\n",
-    "#     X = features[[c for c in features.columns if not c in [\n",
-    "#         'time', 'datetime', 'Concentration', 'target', 'station'\n",
-    "#     ]]].values\n",
-    "#     y = (features['Concentration'].values > 100).astype(int)\n",
-    "#     y_pred_all = copy.deepcopy(y).astype(float)\n",
+    "lags = 100\n",
+    "preds_by_station = []\n",
+    "for s, p in zip(test.station.unique(), test_params):\n",
+    "    data = pd.concat([\n",
+    "        wide_series[list(wide_series.reset_index().day < '2015-01-01')],\n",
+    "        wide_series_imputed[list(wide_series_imputed.reset_index().day >= '2015-01-01')]\n",
+    "    ])\n",
+    "    to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
+    "    features = create_lagged_features(to_lag, lags)\\\n",
+    "        .join(extra_features[extra_features.station == s].set_index('date'))\\\n",
+    "        .join(rolling_mean_features[rolling_mean_features.station == s]\n",
+    "              .set_index('date').drop(['station', 'max_conc_obs'], axis=1))\\\n",
+    "        .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\\\n",
+    "        .fillna(method='bfill').fillna(method='ffill')\n",
+    "    X = features[[c for c in features.columns if not c in [\n",
+    "        'time', 'datetime', 'Concentration', 'target', 'station'\n",
+    "    ]]].values\n",
+    "    y = (features['Concentration'].values > 100).astype(int)\n",
+    "    y_pred_all = copy.deepcopy(y).astype(float)\n",
+    "    metrics_all = []\n",
     "    \n",
-    "#     kf = KFold(n_splits=3)\n",
-    "#     for train_index, test_index in kf.split(X):\n",
-    "#         X_train, X_test = X[train_index], X[test_index]\n",
-    "#         y_train, y_test = y[train_index], y[test_index]\n",
-    "#         model = KNeighborsClassifier(**p)\n",
-    "#         model.fit(X_train, y_train)\n",
-    "#         y_pred = model.predict_proba(X_test)[:, 1]\n",
-    "#         y_pred_all[test_index] = y_pred\n",
+    "    kf = KFold(n_splits=3)\n",
+    "    for train_index, test_index in kf.split(X):\n",
+    "        X_train, X_test = X[train_index], X[test_index]\n",
+    "        y_train, y_test = y[train_index], y[test_index]\n",
+    "        model = KNeighborsClassifier(**p)\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict_proba(X_test)[:, 1]\n",
+    "        y_pred_all[test_index] = y_pred\n",
+    "        metrics_all.append(log_loss(y_test, y_pred, labels=(0, 1)))\n",
     "        \n",
-    "#     preds_by_station.append((s, y_pred_all))\n",
+    "    preds_by_station.append((s, y_pred_all))\n",
     "\n",
     "predictions = pd.DataFrame(np.column_stack([e[1] for e in preds_by_station]), columns=test.station.unique())\n",
     "predictions['date'] = features.reset_index()['day']\n",
     "predictions.to_csv('../reports/pred_knn_Jonas_7_{}'.format(len(glob.glob('../reports/pred_knn_Jonas_7_*'))))\n",
+    "print('CV Metric: {}'.format(np.mean(metrics_all)))\n",
     "predictions.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 154,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
+    "features = create_lagged_features(to_lag, lags)\\\n",
+    "    .join(extra_features[extra_features.station == s].set_index('date'))\\\n",
+    "    .join(rolling_mean_features[rolling_mean_features.station == s]\n",
+    "          .set_index('date').drop(['station', 'max_conc_obs'], axis=1))\\\n",
+    "    .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\\\n",
+    "    .fillna(method='bfill').fillna(method='ffill')\n",
+    "X = features[[c for c in features.columns if not c in [\n",
+    "    'time', 'datetime', 'Concentration', 'target', 'station'\n",
+    "]]]\n",
+    "y = (features['Concentration'].values > 100).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40976936260237118"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train = X[list(X.reset_index()['day'] < '2014-01-01')]\n",
+    "X_test = X[list((X.reset_index()['day'] >= '2014-01-01') & (X.reset_index()['day'] < '2015-01-01'))]\n",
+    "y_train = (features[list(features.reset_index()['day'] < '2014-01-01')]['Concentration'] > 100).astype(int)\n",
+    "y_test = (features[list((features.reset_index()['day'] >= '2014-01-01') & (features.reset_index()['day'] < '2015-01-01'))]['Concentration'] > 100).astype(int)\n",
+    "model = KNeighborsClassifier(n_neighbors=20)\n",
+    "model.fit(X_train, y_train)\n",
+    "log_loss(y_test, model.predict_proba(X_test), labels=(0, 1))"
+   ]
   }
  ],
  "metadata": {
