--- a/notebooks/Jonas_8.ipynb
+++ b/notebooks/Jonas_8.ipynb
@@ -2,30 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: During startup - \n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Warning messages:\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 1: Setting LC_COLLATE failed, using \"C\" \n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 2: Setting LC_TIME failed, using \"C\" \n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 3: Setting LC_MESSAGES failed, using \"C\" \n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 4: Setting LC_MONETARY failed, using \"C\" \n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n"
+      "The rpy2.ipython extension is already loaded. To reload it, use:\n",
+      "  %reload_ext rpy2.ipython\n"
      ]
     }
    ],
@@ -49,15 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "test = pd.read_csv('../data/targets.csv')\n",
     "stations = pd.read_csv('../data/stations.csv')\n",
-    "extra_features = pd.read_csv('/Users/jonaspaulwestermann/Downloads/dataset_v1.csv', index_col=0).drop([\n",
+    "extra_features = pd.read_csv('../data/dataset_v1.csv', index_col=0).drop([\n",
     "    'holiday', 'target', \n",
     "], axis=1)\n",
     "rolling_mean_features = pd.read_csv('../data/data_roll_day_conc_obs.csv')\n",
@@ -66,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +177,7 @@
        "4  2013-01-01 00:00:00  00:00:00            nan     nan  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +436,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,273 +461,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(730, 2873)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "features.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nu      0.96\n",
-      "score   2.74\n",
-      "Name: 0, dtype: float64\n",
-      "nu      0.44\n",
-      "score   2.74\n",
-      "Name: 1, dtype: float64\n",
-      "nu      0.05\n",
-      "score   0.28\n",
-      "Name: 2, dtype: float64\n",
-      "nu      0.39\n",
-      "score   2.74\n",
-      "Name: 3, dtype: float64\n",
-      "nu      0.90\n",
-      "score   2.74\n",
-      "Name: 4, dtype: float64\n",
-      "nu      0.63\n",
-      "score   2.74\n",
-      "Name: 5, dtype: float64\n",
-      "nu      0.78\n",
-      "score   2.74\n",
-      "Name: 6, dtype: float64\n",
-      "nu      0.95\n",
-      "score   2.74\n",
-      "Name: 7, dtype: float64\n",
-      "nu      0.35\n",
-      "score   2.74\n",
-      "Name: 8, dtype: float64\n",
-      "nu      0.72\n",
-      "score   2.74\n",
-      "Name: 9, dtype: float64\n",
-      "nu      0.54\n",
-      "score   2.74\n",
-      "Name: 10, dtype: float64\n",
-      "nu      0.63\n",
-      "score   2.74\n",
-      "Name: 11, dtype: float64\n",
-      "nu      0.77\n",
-      "score   2.74\n",
-      "Name: 12, dtype: float64\n",
-      "nu      0.65\n",
-      "score   2.74\n",
-      "Name: 13, dtype: float64\n",
-      "nu      0.31\n",
-      "score   2.74\n",
-      "Name: 14, dtype: float64\n",
-      "nu      0.20\n",
-      "score   2.74\n",
-      "Name: 15, dtype: float64\n",
-      "nu      0.38\n",
-      "score   2.74\n",
-      "Name: 16, dtype: float64\n",
-      "nu      0.99\n",
-      "score   2.74\n",
-      "Name: 17, dtype: float64\n",
-      "nu      0.50\n",
-      "score   2.74\n",
-      "Name: 18, dtype: float64\n",
-      "nu      0.66\n",
-      "score   2.74\n",
-      "Name: 19, dtype: float64\n",
-      "nu      0.25\n",
-      "score   2.74\n",
-      "Name: 20, dtype: float64\n",
-      "nu      0.64\n",
-      "score   2.74\n",
-      "Name: 21, dtype: float64\n",
-      "nu      0.50\n",
-      "score   2.74\n",
-      "Name: 22, dtype: float64\n",
-      "nu      0.10\n",
-      "score   0.28\n",
-      "Name: 23, dtype: float64\n",
-      "nu      0.69\n",
-      "score   2.74\n",
-      "Name: 24, dtype: float64\n",
-      "nu      0.23\n",
-      "score   2.74\n",
-      "Name: 25, dtype: float64\n",
-      "nu      0.31\n",
-      "score   2.74\n",
-      "Name: 26, dtype: float64\n",
-      "nu      0.11\n",
-      "score   0.28\n",
-      "Name: 27, dtype: float64\n",
-      "nu      0.39\n",
-      "score   2.74\n",
-      "Name: 28, dtype: float64\n",
-      "nu      0.32\n",
-      "score   2.74\n",
-      "Name: 29, dtype: float64\n",
-      "nu      0.27\n",
-      "score   2.74\n",
-      "Name: 30, dtype: float64\n",
-      "nu      0.86\n",
-      "score   2.74\n",
-      "Name: 31, dtype: float64\n",
-      "nu      0.48\n",
-      "score   2.74\n",
-      "Name: 32, dtype: float64\n",
-      "nu      0.32\n",
-      "score   2.74\n",
-      "Name: 33, dtype: float64\n",
-      "nu      0.14\n",
-      "score   1.35\n",
-      "Name: 34, dtype: float64\n",
-      "nu      0.73\n",
-      "score   2.74\n",
-      "Name: 35, dtype: float64\n",
-      "nu      0.27\n",
-      "score   2.74\n",
-      "Name: 36, dtype: float64\n",
-      "nu      0.71\n",
-      "score   2.74\n",
-      "Name: 37, dtype: float64\n",
-      "nu      0.59\n",
-      "score   2.74\n",
-      "Name: 38, dtype: float64\n",
-      "nu      0.51\n",
-      "score   2.74\n",
-      "Name: 39, dtype: float64\n",
-      "nu      0.13\n",
-      "score   0.28\n",
-      "Name: 40, dtype: float64\n",
-      "nu      0.72\n",
-      "score   2.74\n",
-      "Name: 41, dtype: float64\n",
-      "nu      0.70\n",
-      "score   2.74\n",
-      "Name: 42, dtype: float64\n",
-      "nu      0.40\n",
-      "score   2.74\n",
-      "Name: 43, dtype: float64\n",
-      "nu      0.02\n",
-      "score   0.28\n",
-      "Name: 44, dtype: float64\n",
-      "nu      0.10\n",
-      "score   0.28\n",
-      "Name: 45, dtype: float64\n",
-      "nu      0.81\n",
-      "score   2.74\n",
-      "Name: 46, dtype: float64\n",
-      "nu      0.01\n",
-      "score   0.28\n",
-      "Name: 47, dtype: float64\n",
-      "nu      0.37\n",
-      "score   2.74\n",
-      "Name: 48, dtype: float64\n",
-      "nu      0.77\n",
-      "score   2.74\n",
-      "Name: 49, dtype: float64\n",
-      "nu      0.77\n",
-      "score   2.74\n",
-      "Name: 50, dtype: float64\n",
-      "nu      0.80\n",
-      "score   2.74\n",
-      "Name: 51, dtype: float64\n",
-      "nu      0.05\n",
-      "score   0.28\n",
-      "Name: 52, dtype: float64\n",
-      "nu      0.51\n",
-      "score   2.74\n",
-      "Name: 53, dtype: float64\n",
-      "nu      0.39\n",
-      "score   2.74\n",
-      "Name: 54, dtype: float64\n",
-      "nu      0.80\n",
-      "score   2.74\n",
-      "Name: 55, dtype: float64\n",
-      "nu      0.93\n",
-      "score   2.74\n",
-      "Name: 56, dtype: float64\n",
-      "nu      0.75\n",
-      "score   2.74\n",
-      "Name: 57, dtype: float64\n",
-      "nu      0.04\n",
-      "score   0.28\n",
-      "Name: 58, dtype: float64\n",
-      "nu      0.34\n",
-      "score   2.74\n",
-      "Name: 59, dtype: float64\n",
-      "nu      0.76\n",
-      "score   2.74\n",
-      "Name: 60, dtype: float64\n",
-      "nu      0.97\n",
-      "score   2.74\n",
-      "Name: 61, dtype: float64\n",
-      "nu      0.32\n",
-      "score   2.74\n",
-      "Name: 62, dtype: float64\n",
-      "nu      0.30\n",
-      "score   2.74\n",
-      "Name: 63, dtype: float64\n",
-      "nu      0.50\n",
-      "score   2.74\n",
-      "Name: 64, dtype: float64\n",
-      "nu      0.63\n",
-      "score   2.74\n",
-      "Name: 65, dtype: float64\n",
-      "nu      0.85\n",
-      "score   2.74\n",
-      "Name: 66, dtype: float64\n",
-      "nu      0.92\n",
-      "score   2.74\n",
-      "Name: 67, dtype: float64\n",
-      "nu      0.08\n",
-      "score   0.28\n",
-      "Name: 68, dtype: float64\n",
-      "nu      0.75\n",
-      "score   2.74\n",
-      "Name: 69, dtype: float64\n",
-      "nu      0.87\n",
-      "score   2.74\n",
-      "Name: 70, dtype: float64\n",
-      "nu      0.60\n",
-      "score   2.74\n",
-      "Name: 71, dtype: float64\n",
-      "nu      0.09\n",
-      "score   0.28\n",
-      "Name: 72, dtype: float64\n",
-      "nu      0.21\n",
-      "score   2.74\n",
-      "Name: 73, dtype: float64\n",
-      "nu      0.58\n",
-      "score   2.74\n",
-      "Name: 74, dtype: float64\n",
-      "nu      0.50\n",
-      "score   2.74\n",
-      "Name: 75, dtype: float64\n",
-      "nu      0.10\n",
-      "score   0.28\n",
-      "Name: 76, dtype: float64\n",
-      "nu      0.09\n",
-      "score   0.28\n",
-      "Name: 77, dtype: float64\n",
-      "nu      0.68\n",
-      "score   2.74\n",
-      "Name: 78, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.svm import NuSVC\n",
     "from sklearn.model_selection import RandomizedSearchCV, KFold\n",
@@ -766,8 +485,8 @@
     "    y = (features['Concentration'].fillna(method='ffill').values > 100).astype(int)\n",
     "\n",
     "    params = pd.DataFrame({\n",
-    "        'nu': np.random.choice(np.linspace(0.01, .99, 100), 100),\n",
-    "        'score': [np.nan] * 100\n",
+    "        'nu': np.random.choice(np.linspace(0.01, .99, 100), 15),\n",
+    "        'score': [np.nan] * 15\n",
     "    })\n",
     "    for i, r in params[['nu']].iterrows():\n",
     "        kf = KFold(n_splits=3)\n",
@@ -781,11 +500,12 @@
     "                model = NuSVC(**p)\n",
     "                model.fit(X_train, y_train)\n",
     "                y_pred = model.predict_proba(X_test)\n",
+    "                metric.append(\n",
+    "                    log_loss(y_test, y_pred, labels=(0, 1))\n",
+    "                ) \n",
     "            except ValueError: \n",
-    "                y_pred = np.zeros(y_test.shape)\n",
-    "            metric.append(\n",
-    "                log_loss(y_test, y_pred, labels=(0, 1))\n",
-    "            ) \n",
+    "                metric.append(np.nan)\n",
+    "                pass\n",
     "\n",
     "        params.loc[i, 'score'] = np.mean(metric)\n",
     "        print(params.iloc[i])\n",
@@ -796,13 +516,208 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## SVM Classification per Station\n",
+    "\n",
+    "* Targeting `target`\n",
+    "* Using imputed for 2015"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tall_series_mod = obs_and_mods.fillna(0).groupby(['day', 'station']).agg({\n",
+    "    'pred_0_days': agg_types\n",
+    "})['pred_0_days'].reset_index().rename(columns={\n",
+    "    'pred_0_days': 'Concentration'\n",
+    "})\n",
+    "aggs = [tall_series_mod.pivot(index='day', columns='station', values=agg) for agg in agg_types]\n",
+    "aggs = [df.rename(columns={c: c + '_' + agg for c in df.columns}) for df, agg in zip(aggs, agg_types)]\n",
+    "wide_series_mod = pd.concat(aggs, axis=1)\n",
+    "wide_series_mod.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_impute = wide_series.loc[test['date'].unique()]\n",
+    "for s in obs_and_mods.station.unique():\n",
+    "    columns = [s + '_' + agg for agg in agg_types]\n",
+    "    to_impute[columns] = wide_series_mod.loc[to_impute.reset_index().day, columns]\n",
+    "    \n",
+    "originals = wide_series[list(~wide_series.reset_index().day.isin(test['date'].unique()))]\n",
+    "wide_series_imputed = pd.concat([to_impute, originals]).sort_index()\n",
+    "wide_series_imputed.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nu</th>\n",
+       "      <th>score</th>\n",
+       "      <th>station</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>ES0691A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>ES1396A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.59</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>ES1480A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>0.22</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>ES1438A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     nu  score  station\n",
+       "0  0.13   0.28  ES0691A\n",
+       "41 0.01   0.31  ES1396A\n",
+       "7  0.59   0.66  ES1480A\n",
+       "47 0.22   0.67  ES1438A"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_frames = []\n",
+    "for s in test.station.unique():\n",
+    "    frames = [pd.read_csv(f, index_col=0) for f in glob.glob('../reports/cv_svm_Jonas_8*{}*'.format(s))]\n",
+    "    try:\n",
+    "        frame = pd.concat(frames)\n",
+    "        frame['station'] = s\n",
+    "        all_frames.append(frame)\n",
+    "    except ValueError:\n",
+    "        pass\n",
+    "    \n",
+    "cv_results = pd.concat(all_frames)\n",
+    "cv_results = cv_results[cv_results['score'] > 0]\n",
+    "cv_results.sort_values(['score', 'station']).drop_duplicates('station')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "test_params = []\n",
+    "for i, r in cv_results.sort_values(['score', 'station']).drop_duplicates('station').iterrows():\n",
+    "    p = dict(r)\n",
+    "    del p['score']\n",
+    "    del p['station']\n",
+    "    test_params.append((r['station'], p))\n",
+    "    \n",
+    "test_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import NuSVM\n",
+    "from sklearn.model_selection import  KFold\n",
+    "from sklearn.metrics import log_loss\n",
+    "\n",
+    "lags = 100\n",
+    "preds_by_station = []\n",
+    "for s, p in test_params:\n",
+    "    data = pd.concat([\n",
+    "        wide_series[list(wide_series.reset_index().day < '2015-01-01')],\n",
+    "        wide_series_imputed[list(wide_series_imputed.reset_index().day >= '2015-01-01')]\n",
+    "    ])\n",
+    "    to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
+    "    features = create_lagged_features(to_lag, lags)\\\n",
+    "        .join(extra_features[extra_features.station == s].set_index('date'))\\\n",
+    "        .join(rolling_mean_features[rolling_mean_features.station == s]\n",
+    "              .set_index('date').drop(['station', 'max_conc_obs'], axis=1))\\\n",
+    "        .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\\\n",
+    "        .fillna(method='bfill').fillna(method='ffill')\n",
+    "    X = features[[c for c in features.columns if not c in [\n",
+    "        'time', 'datetime', 'Concentration', 'target', 'station'\n",
+    "    ]]].values\n",
+    "    y = (features['Concentration'].values > 100).astype(int)\n",
+    "    y_pred_all = copy.deepcopy(y).astype(float)\n",
+    "    metrics_all = []\n",
+    "    \n",
+    "    kf = KFold(n_splits=3)\n",
+    "    for train_index, test_index in kf.split(X):\n",
+    "        X_train, X_test = X[train_index], X[test_index]\n",
+    "        y_train, y_test = y[train_index], y[test_index]\n",
+    "        model = NuSVM(**p)\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict_proba(X_test)[:, 1]\n",
+    "        y_pred_all[test_index] = y_pred\n",
+    "        metrics_all.append(log_loss(y_test, y_pred, labels=(0, 1)))\n",
+    "        \n",
+    "    preds_by_station.append((s, y_pred_all))\n",
+    "\n",
+    "predictions = pd.DataFrame(np.column_stack([e[1] for e in preds_by_station]), columns=test.station.unique())\n",
+    "predictions['date'] = features.reset_index()['day']\n",
+    "predictions.to_csv('../reports/pred_svm_Jonas_8_{}.csv'.format(len(glob.glob('../reports/pred_svm_Jonas_8_*'))))\n",
+    "print('CV Metric: {}'.format(np.mean(metrics_all)))\n",
+    "predictions.tail()"
+   ]
   }
  ],
  "metadata": {
