Start producing XGBoost output II

--- a/notebooks/Jonas_6.ipynb
+++ b/notebooks/Jonas_6.ipynb
@@ -2,36 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: During startup - \n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Warning messages:\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 1: Setting LC_COLLATE failed, using \"C\" \n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 2: Setting LC_TIME failed, using \"C\" \n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 3: Setting LC_MESSAGES failed, using \"C\" \n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 4: Setting LC_MONETARY failed, using \"C\" \n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n"
+      "The rpy2.ipython extension is already loaded. To reload it, use:\n",
+      "  %reload_ext rpy2.ipython\n"
      ]
     }
    ],
    "source": [
     "import copy\n",
     "import glob\n",
+    "import time\n",
     "import random\n",
     "import regex as re\n",
     "import numpy as np\n",
@@ -1185,42 +1171,14 @@
      "output_type": "stream",
      "text": [
       "Predicting mean for station ES0691A day 2015-01-03\n",
-      "[ 55.21148682]\n",
+      "Predicted [ 55.21148682] in 6.81s\n",
       "Predicting max for station ES0691A day 2015-01-03\n",
-      "[ 91.05612183]\n",
+      "Predicted [ 91.05612183] in 7.04s\n",
       "Predicting std for station ES0691A day 2015-01-03\n",
-      "[ 18.69669724]\n",
+      "Predicted [ 18.69669724] in 7.63s\n",
       "Predicting mean for station ES1856A day 2015-01-03\n",
-      "[ 34.20509338]\n",
-      "Predicting max for station ES1856A day 2015-01-03\n",
-      "[ 84.55183411]\n",
-      "Predicting std for station ES1856A day 2015-01-03\n",
-      "[ 21.84417725]\n",
-      "Predicting mean for station ES1679A day 2015-01-03\n",
-      "[ 45.00798416]\n",
-      "Predicting max for station ES1679A day 2015-01-03\n",
-      "[ 86.17668152]\n",
-      "Predicting std for station ES1679A day 2015-01-03\n",
-      "[ 17.88943291]\n",
-      "Predicting mean for station ES1992A day 2015-01-03\n",
-      "[ 31.74179268]\n",
-      "Predicting max for station ES1992A day 2015-01-03\n",
-      "[ 109.88838196]\n",
-      "Predicting std for station ES1992A day 2015-01-03\n",
-      "[ 21.4956913]\n",
-      "Predicting mean for station ES1396A day 2015-01-03\n",
-      "[ 39.35595322]\n",
-      "Predicting max for station ES1396A day 2015-01-03\n",
-      "[ 85.66468048]\n",
-      "Predicting std for station ES1396A day 2015-01-03\n",
-      "[ 17.69231796]\n",
-      "Predicting mean for station ES1480A day 2015-01-03\n",
-      "[ 66.19998932]\n",
-      "Predicting max for station ES1480A day 2015-01-03\n",
-      "[ 141.78848267]\n",
-      "Predicting std for station ES1480A day 2015-01-03\n",
-      "[ 28.25308418]\n",
-      "Predicting mean for station ES1438A day 2015-01-03\n"
+      "Predicted [ 34.20509338] in 3.42s\n",
+      "Predicting max for station ES1856A day 2015-01-03\n"
      ]
     }
    ],
@@ -1237,6 +1195,7 @@
     "        X = create_lagged_features(to_lag, lags)\n",
     "        X_train = np.nan_to_num(X.iloc[:-1].values)\n",
     "        for agg in agg_types:\n",
+    "            start = time.time()\n",
     "            print('Predicting {} for station {} day {}'.format(agg, s, d))\n",
     "            y_train = np.nan_to_num(data['{}_{}'.format(s, agg)][:-1])\n",
     "            X_test = np.nan_to_num(X.iloc[-1].values.reshape(1, X.shape[1]))\n",
@@ -1245,30 +1204,7 @@
     "            model.fit(X_train, y_train)\n",
     "            y_pred = model.predict(X_test)\n",
     "            edit_wide_series.loc[d, '{}_{}'.format(s, agg)] = y_pred\n",
-    "            print(y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "lags =  25\n",
-    "all_frames = []\n",
-    "for s in test.station.unique():\n",
-    "    frames = [pd.read_csv(f, index_col=0) for f in glob.glob('../reports/cv_xgb_Jonas_6*{}*'.format(s))]\n",
-    "    try:\n",
-    "        frame = pd.concat(frames)\n",
-    "        frame['station'] = s\n",
-    "        all_frames.append(frame)\n",
-    "    except ValueError:\n",
-    "        pass\n",
-    "    \n",
-    "pd.concat(all_frames).sort_values(['score', 'station']).drop_duplicates('station')"
+    "            print('Predicted {} in {:,.2f}s'.format(y_pred, time.time() - start))"
    ]
   }
  ],
